<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/rectangle_at_the_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sepricebg" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="371dp"
        android:layout_height="57dp"

        android:text="@string/main_title"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <View
        android:id="@+id/rectangle_at_the_top"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="480dp"
        android:background="@color/primary_300"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/estudios_realizados"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="289dp"
        tools:ignore="MissingConstraints" />

    <TableLayout
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="40dp"
        android:background="#DAD6D6"
        app:layout_constraintBottom_toTopOf="@+id/materialToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <!-- Headers -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CCCCCC"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/fecha"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Columna de Estudio -->
            <TextView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CCCCCC"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/estudio"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="00dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCCCCC"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/estado"
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableRow>

        <!-- Fila 1 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_04_05_2024"
                android:textSize="16sp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/estudio_a"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rx"
                android:textSize="16sp" />
        </TableRow>

        <!-- Fila 2 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_14_03_2024"
                android:textSize="16sp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/ecograf_a"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/abrir"
                android:textSize="16sp" />
        </TableRow>

        <!-- Fila 3 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_02_11_2023"
                android:textSize="16sp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/espirometr_a"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/abrir"
                android:textSize="16sp" />
        </TableRow>

        <!-- Fila 4 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_04_09_2023"
                android:textSize="16sp" />

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/tomograf_a"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#E4E4E4"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/abrir"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Turnos:  0800 - 345 - 678"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="670dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="©2024 Clinica SePrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="689dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Todos los Derechos Reservados."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="709dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BFA6"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>